--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,16 @@ remote_theme: thelehhman/texture
 plugins:
   - jekyll-feed
 
+texture:
+  title: tomacla
+  tagline: Developer
+  date_format: "%b %-d, %Y"
+  howPicker: false
+  style: black
+
+  social_links:
+    linkedIn: in/thomasclarisse # format: locale/username
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
